k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: flowkind
  labels:
    app: kubernetes-native-app
  name: kubernetes-native-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-native-app
  strategy: { }
  template:
    metadata:
      labels:
        app: kubernetes-native-app
    spec:
      containers:
        - image: registry.gitlab.com/jatinderkumarchaurasia/flowkind/kubernetes-native-app:latest
          name: kubernetes-native-app
          imagePullPolicy: Always
          resources: { }
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              # kubectl create secret docker-registry gitlab-auth --docker-server=https://registry.gitlab.com --docker-username=yourusername --docker-password=yourpassword --docker-email=jatinderkumarchaurasia@gmail.com
      imagePullSecrets:
        - name: gitlab-auth
